--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
+		<title>Web Project</title>
+		<meta charset="UTF-8">
         <style>
             input, button {
 				padding: 10px;
 			}
-        </style>
+		</style>
     </head>
     <body>
         <button onclick="connect()">Connect</button>
