Make table clickable, and writing easier

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
 		<label for="input-value">Value: </label>
 		<input type="text" id="input-value" name="input-value" />
 
-        <button onclick="setCell()">Set</button>
+        <button onclick="setCell()" id="set">Set</button>
 
 		<div id="table-container">
 			<canvas id="canvas"></canvas>
