--- a/static/index.html
+++ b/static/index.html
@@ -20,9 +20,9 @@
 		<label for="input-y">Y: </label>
 		<input type="number" id="input-y" name="input-y" />
 		<label for="input-value">Value: </label>
-		<input type="text" id="input-value" name="input-value" />
+		<input type="text" id="input-value" name="input-value"/>
 
-        <button onclick="setCell()" id="set">Set</button>
+        <button id="set">Set</button>
 
 		<div id="table-container">
 			<canvas id="canvas"></canvas>
