Full-sized scrollable table

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,9 @@
 		<title>Web Project</title>
 		<meta charset="UTF-8">
         <style>
+			body {
+				position: fixed;
+			}
             input, button {
 				padding: 10px;
 			}
