--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 		<title>Web Project</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="stylesheet.css">
-		<link href="icons/fontawesome-free-5.15.2-web/css/all.css" rel="stylesheet">
+		<link href="icons/css/all.css" rel="stylesheet">
     </head>
     <body>
 		<div class="buttons">
