Database and multiple tables support

--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
     <body>
         <button onclick="connect()">Connect</button>
         <button onclick="getDocument()">Get Document</button>
+		<button onclick="createNewDocument()">Create new table</button>
 
 		<br>
 
