--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,6 @@
 		<div id="table-container">
 			<canvas id="canvas"></canvas>
 		</div>
-		<script src="main.js"></script>
+		<script src="load.js"></script>
     </body>
 </html>
