Not using load.js file

--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,11 @@
 			<canvas id="canvas"></canvas>
 		</div>
 
-		<script src="load.js"></script>
+		<script src="globals.js"></script>
+		<script src="cell_table.js"></script>
+		<script src="scrollbar.js"></script>
+		<script src="canvas.js"></script>
+		<script src="style-buttons.js"></script>
+		<script src="main.js"></script>
     </body>
 </html>
