Add basic download csv functionality

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,31 @@
     <body>
 		<div class="document-buttons">
 			<button id="create-new-table-button">Create new table</button>
+			<button id="download-csv-button">Download as CSV</button>
 		</div>
+
+		<div id="csv-download-form" class="form-popup">
+			<form>
+				<h2>Download as CSV</h2>
+
+				<div>
+					<label for="separator">Column separator:</label>
+					<select name="separator" id="separator-select">
+						<option value="comma">Comma (,)</option>
+						<option value="dot">Dot (.)</option>
+						<option value="semicolon">Semicolon (;)</option>
+						<option value="colon">Colon (:)</option>
+						<option value="tab">Tab</option>
+					</select>
+				</div>
+
+				<a id="csv-download-link" href="" download="">
+					<button type="button" class="btn" onclick="downloadCsv()">Download</button>
+				</a>
+				<button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
+			</form>
+		</div>
+
 
 		<div class="style-buttons">
 			<button id="bold-button">
@@ -53,5 +77,6 @@
 		<script src="canvas.js"></script>
 		<script src="style-buttons.js"></script>
 		<script src="main.js"></script>
+		<script src="csv.js"></script>
     </body>
 </html>
