working login/ registration requests

--- a/static/Auth/registration.html
+++ b/static/Auth/registration.html
@@ -13,7 +13,7 @@
             </tr>
             <tr class="form-element">
                <td>Потребителско име</td>
-               <td> <input type="text" name="username"  id = "username"pattern="[a-zA-Z]+[0-9]*" required /> </td>
+               <td> <input type="text" name="username"  id = "username" pattern="[a-zA-Z]+[0-9]*" required /> </td>
             </tr>
             <tr class="form-element">
                <td>Парола</td>
@@ -21,10 +21,13 @@
             </tr>
          </table>
       
-         <button type="submit" name="register" id = "registerButton" value="register">Регистрация</button>
+         <button type="button" name="register" id = "registerButton" value="register">Регистрация</button>
+         <div id="messageHolder">
+
+         </div>
       </form>
 
-      <script type="text/javascript" src="AuthManager.js"></script>
+      <script type="text/javascript" src="RegistrationRequest.js"></script>
    </body>
   
 </html>
