--- a/static/Auth/login.html
+++ b/static/Auth/login.html
@@ -7,19 +7,24 @@
    <body>
       <div>
          <h1>Login Page</h1>
-         <form method="POST" action="logincheck.php">
+         <form method="POST" action="">
             <table>
                <tr>
                   <td>Въведете факултетен номер:</td>
-                  <td><input id = "facultyNumber" type="number" size="5" name="facultyNumber"></td>
+                  <td><input id = "facultyNumber" type="number"  name="facultyNumber" required> </td>
                </tr>
                <tr>
                   <td>Въведете парола:</td>
-                  <td><input type="password" size="10" name="loginPassword"></td>
+                  <td><input type="password" id="password" name = "password" required></td>
                </tr>
             </table>
-            <p><input type="submit" value="Log in">
+            <p><input type="button" id="login" value="Влез">
          </form>
+         <div id="messageHolder">
+
+         </div>
       </div>
+
+      <script type="text/javascript" src="LoginRequest.js"></script>
    </body>
 </html>
