--- a/static/Auth/registration.html
+++ b/static/Auth/registration.html
@@ -3,29 +3,31 @@
    <head>
       <meta charset="utf-8">
       <title>Регистрация</title>
+      <link rel="stylesheet" href="styles.css">
    </head>
 
    <body>
-      <form method="POST" action="" name="signup-form">
-         <table>
-               <td>Факултетен номер</td>
-               <td> <input type="number" name="facultyNumber" id = "facultyNumber" required /> </td>
-            </tr>
-            <tr class="form-element">
-               <td>Потребителско име</td>
-               <td> <input type="text" name="username"  id = "username" pattern="[a-zA-Z]+[0-9]*" required /> </td>
-            </tr>
-            <tr class="form-element">
-               <td>Парола</td>
-               <td><input type="password" name="password" id = "password" required /> </td>
-            </tr>
-         </table>
-      
-         <button type="button" name="register" id = "registerButton" value="register">Регистрация</button>
-         <div id="messageHolder">
+      <div class="box">
+         <form method="POST" action="" name="signup-form">
+            <h1>Регистрация</h1>
 
-         </div>
-      </form>
+            <div >
+               <input type="number"  class = "Inputs" name="facultyNumber" id = "facultyNumber" placeholder="Факултетен номер" required />
+               <input type="text" name="username"  class = "Inputs"  id = "username" pattern="[a-zA-Z]+[0-9]*" placeholder="Потребителско име" required />
+               <input type="password" name="password" class = "Inputs" id = "password" placeholder="Парола" required /> 
+
+               <div class="text-center">
+                  <p>
+                     <button type="button" class="btn-primary" name="register" id = "registerButton" value="register">Регистрация</button>
+                  </p>
+               </div>
+           </div>
+            <br>
+            <div id="messageHolder">
+
+            </div>
+         </form>
+      </div>
 
       <script type="text/javascript" src="RegistrationRequest.js"></script>
    </body>
