--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,8 @@
 			<button id="align-center" class="align">
 				<i class="fas fa-align-center"></i>
 			</button>
-			<input id="colorPicker" type="color">
+			<input id="colorPickerBg" type="color">
+			<input id="colorPickerFg" type="color">
 		</div>
 
 		<div id="input">
