Make the CSV input accept only text and csv files

--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,7 @@
 			<form>
 				<h2>Upload CSV</h2>
 
-				<input id="file-upload" type="file"></button>
+				<input id="file-upload" type="file" accept=".csv, .txt"></button>
 
 				<div>
 					<label for="separator">Column separator:</label>
