Update styles of login and register forms

--- a/static/Auth/login.html
+++ b/static/Auth/login.html
@@ -19,13 +19,8 @@
                 </div>
             </div>
          </form>
-         <br>
-         <div id="messageHolder">
-
-         </div>
+         <div id="messageHolder"></div>
          <a href="./registration.html">Регистрация</a>
-         <br>
-         <br>
       </div>
       
 
