--- a/static/Auth/registration.html
+++ b/static/Auth/registration.html
@@ -22,10 +22,7 @@
                   </p>
                </div>
            </div>
-            <br>
-            <div id="messageHolder">
-
-            </div>
+            <div id="messageHolder"></div>
          </form>
       </div>
 
