--- a/static/Auth/login.html
+++ b/static/Auth/login.html
@@ -10,8 +10,8 @@
          <h1>Login</h1>
          <form method="POST" action="">
             <div >
-                <input id = "facultyNumber" type="number" class = "Inputs"  name="facultyNumber" placeholder="Факултетен номер" required/> 
-                <input type="password" id="password" class = "Inputs" name = "password" placeholder="Парола" required/>
+                <input id = "facultyNumber" type="number" class = "Inputs p100"  name="facultyNumber" placeholder="Факултетен номер" required/> 
+                <input type="password" id="password" class = "Inputs p100" name = "password" placeholder="Парола" required/>
                 <div class="text-center">
                    <p>
                      <button class="btn btn-primary" type="button" id="login" value="Влез">Влез</button>
