--- a/static/Auth/registration.html
+++ b/static/Auth/registration.html
@@ -12,9 +12,9 @@
             <h1>Регистрация</h1>
 
             <div >
-               <input type="number"  class = "Inputs" name="facultyNumber" id = "facultyNumber" placeholder="Факултетен номер" required />
-               <input type="text" name="username"  class = "Inputs"  id = "username" pattern="[a-zA-Z]+[0-9]*" placeholder="Потребителско име" required />
-               <input type="password" name="password" class = "Inputs" id = "password" placeholder="Парола" required /> 
+               <input type="number"  class = "Inputs p100" name="facultyNumber" id = "facultyNumber" placeholder="Факултетен номер" required />
+               <input type="text" name="username"  class = "Inputs p100"  id = "username" pattern="[a-zA-Z]+[0-9]*" placeholder="Потребителско име" required />
+               <input type="password" name="password" class = "Inputs p100" id = "password" placeholder="Парола" required /> 
 
                <div class="text-center">
                   <p>
